--- a/Source/CriticalPath.Web/CriticalPath.Web.csproj
+++ b/Source/CriticalPath.Web/CriticalPath.Web.csproj
@@ -395,7 +395,7 @@
     <Content Include="Areas\Admin\Views\Shared\_SaveButtonsPartial.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_SearchBoxPartial.cshtml" />
     <Content Include="images\busy.gif" />
-    <Content Include="images\no_image_available.svg" />
+    <Content Include="images\no_image_found.png" />
     <Content Include="libs\ag-grid\ag-dark-blue.css" />
     <Content Include="libs\ag-grid\ag-grid-addt.css" />
     <Content Include="libs\ag-grid\ag-grid.css" />
