--- a/Source/CriticalPath.Data/CriticalPath.Data.csproj
+++ b/Source/CriticalPath.Data/CriticalPath.Data.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Contact.cs">
       <DependentUpon>CriticalPathModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Parts\ContactDTO.part.cs" />
     <Compile Include="Country.cs">
       <DependentUpon>CriticalPathModel.tt</DependentUpon>
     </Compile>
